@@ -206,7 +206,7 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
   </tr>
   
   <tr>
-    <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
+    <td><p align="center"><img src="@IMAGES@fink.png"></p></td>
     <td>
       MacOS X/Fink
     </td>
@@ -381,6 +381,27 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
   <tr>
     <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
     <td>
+      MacOS X
+    </td>
+    <td>
+      <tt>current-unstable</tt>
+    </td>
+    <td>
+    
+      <strong>
+      Download <a
+    href="http://lilypond.org/download/binaries/MacOS/lilypond-2.5.25.zip">
+    lilypond</a></strong>
+    </td>
+    <td>2.5.25</td>  
+    <td>
+          <a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a>
+    </td> 
+  </tr>
+
+  <tr>
+    <td><p align="center"><img src="@IMAGES@fink.png"></p></td>
+    <td>
       MacOS X/Fink
     </td>
     <td>
@@ -389,12 +410,13 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
     <td>
       <strong>  Go <a href="macos.html">here</a></strong>
     </td>
-    <td>2.5.23</td>  
+    <td>2.2.6</td>  
     <td>
       <a href="http://homepage.mac.com/neeracher/contact.html">Matthias Neeracher</a>
     </td> 
   </tr>
 
+  
   <tr>
     <td><p align="center"><img src="@IMAGES@windows.png"></p></td>
     <td>MS Windows</td>
@@ -594,7 +616,7 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
   </tr>
   
   <tr>
-    <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
+    <td><p align="center"><img src="@IMAGES@fink.png"></p></td>
     <td>
       MacOS X/Fink
     </td>
